--- a/axon_client/package.json
+++ b/axon_client/package.json
@@ -9,32 +9,47 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^0.0.51",
+    "@google/generative-ai": "^0.21.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
     "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-query": "^5.52.3",
+    "@tiptap/core": "^2.8.0",
     "@tiptap/extension-bubble-menu": "^2.6.6",
-    "@tiptap/extension-code-block-lowlight": "^2.6.6",
+    "@tiptap/extension-code": "^2.8.0",
+    "@tiptap/extension-code-block-lowlight": "^2.8.0",
     "@tiptap/extension-color": "^2.6.6",
     "@tiptap/extension-highlight": "^2.6.6",
+    "@tiptap/extension-placeholder": "^2.8.0",
     "@tiptap/extension-text-style": "^2.6.6",
     "@tiptap/extension-underline": "^2.6.6",
+    "@types/highlightjs": "^9.12.6",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/lowlight": "^0.0.7",
     "@types/uuid": "^10.0.0",
     "@uploadthing/react": "^6.8.0",
+    "ai": "^3.4.9",
     "axios": "^1.7.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "highlight.js": "link:@types\\highlight.js",
+    "jsonwebtoken": "^9.0.2",
     "lowlight": "^3.1.0",
     "lucide-react": "^0.436.0",
     "next": "14.2.7",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^3.6.15",
     "novel": "^0.5.0",
+    "phosphor-react": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-markdown": "^9.0.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
