--- a/axon_server/biome.json
+++ b/axon_server/biome.json
@@ -1,13 +1,21 @@
 {
 	"$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
 	"linter": {
-		"enabled": true
+		"enabled": true,
+		"rules": {
+			"style": {
+				"useImportType": "off"
+			},
+			"suspicious": {
+				"noExplicitAny": "off"
+			}
+		}
 	},
 	"formatter": {
 		"enabled": true,
 		"indentStyle": "tab",
 		"indentWidth": 2,
-		"lineWidth": 200
+		"lineWidth": 80
 	},
 	"organizeImports": {
 		"enabled": true
