--- a/axon_server/package.json
+++ b/axon_server/package.json
@@ -26,8 +26,11 @@
   },
   "dependencies": {
     "@sanity/client": "^6.22.0",
+    "@types/bun": "^1.1.11",
     "@types/multer": "^1.4.12",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
